# MusicManager

./: # LICENSE.md  .env.example  .gitignore  .releaserc.json  CHANGELOG.md  Dockerfile  README.md  config.toml.example  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml  release.yml
src/music_manager/: __init__.py  main.py
src/music_manager/api/: dependencies.py  main.py  models.py
src/music_manager/api/routers/: db.py  downloader.py  lidarr.py  plex.py  settings.py  spotify.py
src/music_manager/cli/: __init__.py  db_commands.py  downloader_commands.py  library_commands.py  lidarr_commands.py  plex_commands.py  settings_commands.py  spotify_commands.py  support_commands.py
src/music_manager/core/: __init__.py  app_factory.py  config_manager.py  database_manager.py  logger.py
src/music_manager/services/: __init__.py  downloader.py  organizer.py  playlist_generator.py  validation_service.py
src/music_manager/utils/: __init__.py  processes.py
src/music_manager/wrappers/: spotify_wrapper.py
